[package]
name = "twiquery-batch"
version = "0.0.1"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"

[dependencies]
curl = "0.4.21"
twitter-stream = "0.9"
twitter-stream-message = "0.3.0"
tweetust = "0.9"
chrono = "0.4"
snailquote = "0.2"
futures = "0.1.4"
envy = "0.4"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
slog-stdlog = "3.0.2"
slog-scope = "4.1.1"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"